<resources>
    <string name="app_name">ContainersMaps</string>
    <string name="title_activity_maps">Map</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="incorrect_credentials">Email or Password is wrong</string>
    <string name="check_internet">
        Check your internet connection\n\n
        Refresh
    </string>
    <string name="title_activity_marker_detail">Map</string>
    <string name="change_position"> <u>Change position</u> </string>
    <string name="unkown_error">An error has occurred</string>
</resources>
