<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_check_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/check_internet"
        android:visibility="gone"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3">


                    <ImageView
                        android:id="@+id/iv_login_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        android:background="@color/colorPrimary"/>

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="8dp"
                        android:paddingTop="16dp"
                        android:paddingRight="16dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="8dp"
                        android:paddingBottom="16dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:inputType="textPassword"
                        android:paddingTop="16dp"
                        android:paddingRight="16dp"
                        android:paddingEnd="16dp"
                        android:hint="@string/password"
                        android:paddingBottom="16dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tv_incorrect_credentials"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/incorrect_credentials"
                        android:textColor="@color/colorRed"
                        android:textSize="16sp"
                        android:visibility="gone" />
                    <Button
                        android:id="@+id/btn_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:padding="16dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/sign_in"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />




                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>